# gptsum

./: .buildinfo  .flake8  .gitignore  .safety-policy.yml  CONTRIBUTING.rst  README.md  README.rst  api.html  contributing.html  genindex.html  gptsum.spec  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  python-gptsum.spec  search.html  searchindex.js
.doctrees/: api.doctree  contributing.doctree  environment.pickle  index.doctree
.github/: dependabot.yml
.github/actions/rpmbuild/: Dockerfile  action.yml  entrypoint.sh  provision.sh
.github/workflows/: codeql-analysis.yml  constraints.in  constraints.txt  dependabot.yml  labeler.yml  release.yml  rpmbuild-test.yml  tests.yml
docs/: conf.py  index.rst
src/gptsum/: __init__.py  checksum.py  cli.py  gpt.py
tests/: conftest.py  test_checksum.py  test_cli.py  test_gpt.py  test_init.py  test_main.py  test_readme.py
tests/testdata/: disk  embedded-disk
