[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gptsum"
version = "0.5.0"
description = "A tool to make disk images using GPT partitions self-verifiable"
authors = [
    "Nicolas Trangez <ikke@nicolast.be>",
]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/NicolasT/gptsum"
repository = "https://github.com/NicolasT/gptsum.git"
keywords = ["gpt", "diskimage", "checksum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]

include = [
    { path = "tests/", format = "sdist" },
    { path = "docs/", format = "sdist" },
    { path = "poetry.lock", format = "sdist" },
]

[tool.poetry.urls]
Homepage = "https://github.com/NicolasT/gptsum"
Documentation = "https://nicolast.github.io/gptsum/"
Changelog = "https://github.com/NicolasT/gptsum/releases"
Issues = "https://github.com/NicolasT/gptsum/issues"
"Pull Requests" = "https://github.com/NicolasT/gptsum/pulls"

[tool.poetry.scripts]
gptsum = "gptsum.cli:main"

[tool.poetry.dependencies]
python = "^3.9.23"

[tool.poetry.dev-dependencies]
mypy = "^1.18"
flake8 = "^7.3.0"
flake8-bugbear = "^24.12.12"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.4.0"
pep8-naming = "^0.15.1"
darglint = "^1.8.0"
black = "25.9.0"
flake8-black = "^0.4.0"
safety = "^3.7.0"
Sphinx = "^7.4.7"
furo = "^2025.9.25"
sphinx-argparse = "^0.4.0"
coverage = {version = "^7.10", extras = ["toml"]}
pygments = "^2.19.2"
pytest = "^8.4.2"
typeguard = "^4.4.4"
xdoctest = {version = "^1.3.0", extras = ["colors"]}
flake8-pytest-style = "^2.1.0"
flake8-pytest = "^1.4"
flake8-builtins = "^3.0.0"
flake8-isort = "^6.1.2"
flake8-return = "^1.2.0"
flake8-expression-complexity = "^0.0.11"
pytest-mock = "^3.15.1"
pytest-benchmark = "^5.2.1"
coverage-conditional-plugin = "^0.9.0"
pylint = "^3.3.9"
# Work-around https://github.com/pypi/warehouse/issues/15749
docutils = "!=0.21.post1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["gptsum", "tests"]
plugins = ["coverage_conditional_plugin"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.coverage_conditional_plugin.rules]
platform-darwin = "sys_platform == 'darwin'"
platform-win32 = "sys_platform == 'win32'"
py-lt-39 = "sys_version_info < (3, 9)"
py-gte-39 = "sys_version_info >= (3, 9)"

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pylint.basic]
good-names = ["fd", "ns"]
